Thu Sep  7 20:24:46 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * main.c (main): use getopt_long(), accept "--help" and
        "--version".
        Don't assume EOF is -1.

Thu Sep 7  19:18:00 1995  Jim Blandy  <jimb@cyclic.com>

	* cvs.h (unlink_file_dir): Add prototype for this.

Thu Sep  7 14:38:06 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * ALL FILES: add semicolon, as indicated below.
        
        * cvs.h (USE): don't provide semicolon in the expansion of the USE
        macro; we'd rather the callers provided it themselves because that
        way etags doesn't get fooled.

Mon Sep  4 23:30:41 1995  Magnus Hyllander  <mhy@os.se>

	* checkout.c: cvs export now takes -k option and does not default
	to -kv.
	* checkout.c, cvs.h, modules.c: Modules file now takes -e option
	for cvs export.

Mon Sep  4 23:30:41 1995  Kirby Koster  <koster@sctc.com>

	* commit.c: When committing a removal, print a message saying what
	we are doing.

Wed Aug  2 10:06:51 1995  Vince DeMarco  <vdemarco@bou.shl.com>

	* server.c: fix compiler warnings (on NeXT) (declare functions as
	static inline instead of just static) functions: get_buffer_date,
	buf_append_char, and buf_append_data

Mon Sep  4 22:31:28 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (update_entries), import.c (expand_at_signs): Check for
	errors from fread and putc.

Fri Sep  1 00:03:17 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Fix TODO item pathname.

	* sanity.el: Removed.  It was out of date, didn't do much, and I
	doubt anyone was using it.

	* no_diff.c (No_Difference): Don't change the modes of the files.

Thu Aug 31 13:14:34 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* version.c: Change version to 1.5.1.

	* client.c (start_rsh_server): Don't pass -d to "cvs server"
	invocation via rsh (restore change which was lost when NT stuff
	was merged in).
	* sanity.sh: Add TODO item suggesting test for bug which this fixes.
